--- a/Angular/src/app/header/header.component.html
+++ b/Angular/src/app/header/header.component.html
@@ -1,26 +1,23 @@
 <header>
-    <nav>
-      <!-- צד שמאל - כפתור אודות -->
-      <div class="left">
-        <a routerLink="/about" class="about-button">אודות</a>
-      </div>
-  
-<!-- מרכז - הלוגו -->
-<div class="center">
-  <a routerLink="/">
-    <img src="assets/LOGO_LONG.png" alt="לוגו" class="logo" />
-  </a>
-</div>
-  
-      <!-- צד ימין - תמונת פרופיל -->
-      <div class="right">
+  <nav>
+    <!-- צד שמאל - כפתור אודות -->
+    <div class="left">
+      <a routerLink="/about" class="about-button">אודות</a>
+    </div>
 
-        <img src="../../assets/Empty street-cuate.png" alt="תמונת פרופיל" class="profile-pic" />
+    <!-- מרכז - הלוגו -->
+    <div class="center">
+      <a routerLink="/">
+        <img src="assets/LOGO_LONG.png" alt="לוגו" class="logo" />
+      </a>
+    </div>
 
-        <a routerLink="personalArea">
-        <span class="user-status">משתמש לא מחובר</span>
-        </a>
-      </div>
-    </nav>
-  </header>
-  
+    <!-- צד ימין - תמונת פרופיל -->
+    <div class="right">
+      <a routerLink="/personalArea">
+        <!-- <img src="../../assets/Empty street-cuate.png" alt="תמונת פרופיל" class="profile-pic" /> -->
+        <span class="user-status">הפרופיל שלי</span>
+      </a>
+    </div>
+  </nav>
+</header>
